[tool.poetry]
name = "data-extractor"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
google-genai = "^1.5.0"
python-fasthtml = "^0.12.4"
pydantic = "^2.10.6"
monsterui = "^1.0.11"
pyperclip = "^1.9.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
